--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "build-storybook": "build-storybook"
   },
   "dependencies": {
+    "babel-plugin-styled-components": "^1.12.0",
     "gatsby": "^3.0.1",
+    "gatsby-plugin-styled-components": "^4.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "webpack": "^4.46.0"
+    "styled-components": "^5.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.13.8",
@@ -29,7 +31,17 @@
     "@storybook/react": "^6.1.21",
     "babel-loader": "^8.2.2",
     "babel-preset-react-app": "^10.0.0",
-    "prettier": "2.2.1"
+    "eslint": "^7.22.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-config-prettier": "^8.1.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-prettier": "^3.3.1",
+    "eslint-plugin-react": "^7.22.0",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "html-webpack-plugin": "^5.3.1",
+    "prettier": "^2.2.1",
+    "prettier-eslint-cli": "^5.0.1"
   },
   "repository": {
     "type": "git",
