--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "babel-plugin-styled-components": "^1.12.0",
     "gatsby": "^3.0.1",
     "gatsby-plugin-image": "^1.1.2",
+    "gatsby-plugin-manifest": "^3.3.0",
     "gatsby-plugin-sharp": "^3.1.2",
     "gatsby-plugin-styled-components": "^4.0.0",
     "gatsby-source-filesystem": "^3.1.0",
